# Deep_Learning

./: .gitignore  README.md  app.py  docker_commands.md  docker_knowledge.md  dockerfile  dvc.yaml  git_operations.md  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  t.txt  template.py  template.sh
.github/workflows/: main.yaml
config/: config.yaml
gamma/: DESIGN.md  design.html
model/: training_model.h5
research/: Base_model.ipynb  data_ingestion.ipynb  model_evaluation(ml_flow).ipynb  model_training.ipynb  trials.ipynb
src/: __init__.py
src/components/: Prepare_Base_Model.py  data_ingestion.py  model_evaluation.py  model_training.py
src/config/: config.yaml  configuration.py
src/entity/: config_entity.py
src/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/utils/: common.py
templates/: index.html
