[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.67.1",
    "ensure>=1.0.4",
    "flask<3",
    "flask-cors>=6.0.5",
    "gdown>=6.1.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "mlflow==2.2.2",
    "notebook>=7.6.0",
    "numpy>=1.26.4,<2.0",
    "pandas>=2.3.3",
    "python-box>=7.4.1",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow==2.10.0",
    "tqdm>=4.68.3",
    "types-pyyaml>=6.0.12.20260518",
    "setuptools<82",
]
